Do not delete package root if package was deleted

BUG: 410682
FIXED-IN: 5.74